[package]
name = "ninat"
version = "0.1.0"
authors = ["Xie Zhihao <xzh1206@gmail.com>"]
edition = "2018"
description = "Deal with NAT traversal using Nintendo service."
documentation = "https://docs.rs/ninat"
readme = "README.md"
repository = "https://github.com/zhxie/ninat"
license = "MIT"
keywords = ["stun"]
categories = ["command-line-utilities", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
dns-lookup = "1.0.3"
socks = "0.3.2"
structopt = "0.3.15"
